WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310153
[Async Scrolling] missing tiles after history back
https://bugs.webkit.org/show_bug.cgi?id=310153
Summary
[Async Scrolling] missing tiles after history back
Fujii Hironori
Reported
2026-03-17 19:29:39 PDT
(Derived from
bug#309478
) 1. Load the test content 2. Click "step 1" 3. Click "step 2" 4. Go back Actual: blank screen Expected: the content should be shown
Attachments
test content
(405 bytes, text/html)
2026-03-17 19:29 PDT
,
Fujii Hironori
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2026-03-17 19:29:57 PDT
Created
attachment 478710
[details]
test content
Fujii Hironori
Comment 2
2026-03-18 00:06:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60843
Radar WebKit Bug Importer
Comment 3
2026-03-24 19:30:13 PDT
<
rdar://problem/173288233
>
Fujii Hironori
Comment 4
2026-03-25 19:58:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61369
EWS
Comment 5
2026-03-25 22:51:24 PDT
Committed
309966@main
(c757260acf90): <
https://commits.webkit.org/309966@main
> Reviewed commits have been landed. Closing PR #61369 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug