Fixed missing tiles after history back https://bugs.webkit.org/show_bug.cgi?id=310153

Reviewed by NOBODY (OOPS!).

A blank page was shown after history back in certain conditions.
HistoryController::restoreScrollPositionAndViewState() restores the scroll
position from a history item. It called
LocalFrameView::scrollToFocusedElementImmediatelyIfNeeded() and
Page::setPageScaleFactor(). Page::setPageScaleFactor() sets the page scale and
the scroll position. If LocalFrameView class method
scrollToFocusedElementImmediatelyIfNeeded() already restored the scroll
position, Page::setPageScaleFactor() skipped layout. Thus, a RenderLayerBacking
wasn't created when the scroll position was restored, and
GraphicsLayer::setPosition() was not called. Then, the coverage area was
miscomputed, and tiles were missing.

HistoryController::restoreScrollPositionAndViewState() doesn't have to call
scrollToFocusedElementImmediatelyIfNeeded() since calling
Page::setPageScaleFactor() and LocalFrameView::setScrollPosition() restores the
scroll position. Removed it.

Test: compositing/accelerated-layers-after-back-2.html

* LayoutTests/compositing/accelerated-layers-after-back-2-expected.html: Added.
* LayoutTests/compositing/accelerated-layers-after-back-2.html: Added.
* LayoutTests/platform/ios-site-isolation/TestExpectations:
* LayoutTests/platform/mac-site-isolation/TestExpectations:
* Source/WebCore/loader/HistoryController.cpp:
(WebCore::HistoryController::restoreScrollPositionAndViewState):
* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::scrollToFocusedElementImmediatelyIfNeeded): Deleted.
* Source/WebCore/page/LocalFrameView.h: